<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myPrimaryColor"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/aurora_splash"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/splash_screen_developed_by"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_developed_by"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/splash_screen_developer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:text="@string/app_developer"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/splash_screen_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_version"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible" />

    <TextView
        android:layout_marginTop="25dip"
        android:id="@+id/splash_loading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Loading"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/loading"
        android:max="60"
        android:layout_gravity="center"
        android:gravity="center"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dip"
        android:layout_height="wrap_content"/>

</LinearLayout>