<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@color/myPrimaryColor"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/menuBackButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/action_item_back"
            android:clickable="true"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/titleMenuButton"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:lines="1"
            android:text="@string/app_inventory_menu_stock_summary"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_refresh"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            android:id="@+id/target_penjualan_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ibbutton_black"
            android:gravity="center"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:text="@string/app_inventory_unload_product_target_penjualan_button_add_target_penjualan"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/target_penjualan_btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ibbutton_black"
            android:gravity="center"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:text="@string/app_inventory_unload_product_target_penjualan_button_upload_target_penjualan"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:padding="5dip" >

        <EditText
            android:id="@+id/target_penjualan_et_search_nama"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/description_back_shape"
            android:hint="@string/app_inventory_unload_product_target_penjualan_hint_search_customer"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/Ivory3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_inventory_unload_product_target_penjualan_tv_nomor_target_penjualan"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/app_inventory_unload_product_target_penjualan_tv_nama_target_penjualan"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/app_inventory_unload_product_target_penjualan_tv_action"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/dividerHeaderBottom"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#414141" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:divider="@color/listview_divider"
        android:dividerHeight="0.8dp"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</LinearLayout>