<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dip"
    android:orientation="horizontal"
    android:padding="10dip" >

    <TextView
        android:id="@+id/stock_summary_nama_product"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="0.8"
        android:maxLines="5"
        android:minLines="1"
        android:padding="10dip"
        android:text="@string/app_inventory_stock_summary_textview_nama_product"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/stock_summary_stock_gudang"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="0.23"
        android:maxLines="5"
        android:minLines="1"
        android:padding="10dip"
        android:text="@string/app_inventory_stock_summary_textview_stock_gudang"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/stock_summary_stock_van"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="1"
        android:minLines="1"
        android:padding="10dip"
        android:text="@string/app_inventory_stock_summary_textview_stock_van"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>