<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/textViewSuperAdminHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_setting_tv_url"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_superadmin_edittext_username"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/description_back_shape"
        android:hint="@string/app_setting_hint_url"
        android:imeOptions="actionNext"
        android:inputType="text|textNoSuggestions"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/Ivory3" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/activity_superadmin_btn_login"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_green"
        android:minHeight="50dp"
        android:minWidth="150dip"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:text="@string/MSG_DLG_LABEL_SAVE"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>