<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dip" >

    <TextView
        android:id="@+id/request_load_kode_product"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="1"
        android:maxLines="5"
        android:minLines="1"
        android:padding="10dip"
        android:text="@string/app_inventory_request_load_textview_kode_product"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/request_load_nama_product"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="1"
        android:maxLines="5"
        android:minLines="1"
        android:padding="10dip"
        android:text="@string/app_inventory_request_load_textview_nama_product"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/request_load_jumlah"
        android:layout_width="0dip"
        android:layout_height="50dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="1"
        android:background="@drawable/description_back_shape"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/app_inventory_request_load_textview_hint"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="5"
        android:padding="5dip"
        android:textColor="@color/black"
        android:textColorHint="@color/Ivory3"
        android:textSize="16sp" />

</LinearLayout>